crates/resource/tests/probes/derive_missing_config.stderr
error: missing required attribute `config = SomeType`
 --> tests/probes/derive_missing_config.rs:7:8
  |
7 | struct MissingConfig;
  |        ^^^^^^^^^^^^^
